Fix: Fixed minmax values for product details and added auto-width for rounded buttons
Includes changed to h1 padding on product pages and padding-right for picture tiles if they are the last child in horizontal scroll div

--- a/CSS/V2Mobile.css
+++ b/CSS/V2Mobile.css
@@ -176,7 +176,6 @@
   .utilityTile {
     margin: 0 var(--standard-margin) 0 0;
     padding: 0 var(--standard-margin) 0 0;
-    min-width: 200px;
   }
 
   .card__image {
@@ -193,7 +192,7 @@
   .category__header {
     font-size: 3rem;
     justify-content: flex-start;
-    padding-left: 20px;
+    padding: 2rem 20px;
   }
 
   .category__details {
@@ -274,7 +273,6 @@
   .utilityTile {
     margin: 0 var(--standard-margin) 0 0;
     padding: 0 var(--standard-margin) 0 0;
-    min-width: 200px;
   }
 
   .card__mobileDescription {
