--- a/CSS/clothingNew_copy.scss
+++ b/CSS/clothingNew_copy.scss
@@ -249,6 +249,10 @@ main {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none;
     // overflow-x: scroll;
+
+    &:last-child {
+      padding-right: 1.25rem;
+    }
   }
 
   &__card {
@@ -259,6 +263,10 @@ main {
     // overflow: hidden;
     height: calc(100vh - 64px);
     // position: relative;
+
+    &:last-child {
+      padding-right: 1.25rem;
+    }
   }
 
   &__infoCard {
@@ -410,6 +418,7 @@ main {
 
   &__details {
     width: 100%;
+    max-width: 100vw;
     height: auto;
     padding: var(--standard-margin) 0 var(--standard-margin) 150px;
     display: flex;
@@ -426,7 +435,7 @@ main {
 
   &__detailsGrid {
     width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 450px));
     grid-template-rows: repeat(1, 1fr);
   }
 }
